--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,11 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <scope>20160212 </scope>
+    </dependency>
   </dependencies>
 </project>
